deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website

spec:
  selector:
    app.kubernetes.io/name: website
  ports:
    - name: http
      port: 80
      targetPort: 5000
