deploy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website

spec:
  entryPoints:
    - public
  tls:
    certResolver: main
  routes:
    - kind: Rule
      match: Host(`dennisskoko.com`)
      services:
        - name: website
          port: http
